--- a/Solana-Token-Starter-File/package.json
+++ b/Solana-Token-Starter-File/package.json
@@ -22,11 +22,11 @@
     "axios": "^1.6.5",
     "daisyui": "^1.24.3",
     "immer": "^9.0.12",
-    "next": "12.0.8",
+    "next": "^12.0.8",
     "next-compose-plugins": "^2.2.1",
     "next-transpile-modules": "^9.0.0",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "react-icons": "^4.11.0",
     "react-spinners": "^0.13.5",
     "zustand": "^3.7.2"
