--- a/Solana-Token-Starter-File/package.json
+++ b/Solana-Token-Starter-File/package.json
@@ -19,6 +19,7 @@
     "@solana/wallet-adapter-wallets": "^0.18.2",
     "@solana/web3.js": "^1.95.4",
     "@tailwindcss/typography": "^0.5.0",
+    "apexcharts": "^3.54.1",
     "axios": "^1.6.5",
     "daisyui": "^1.24.3",
     "immer": "^9.0.12",
@@ -26,6 +27,7 @@
     "next-compose-plugins": "^2.2.1",
     "next-transpile-modules": "^9.0.0",
     "react": "^17.0.2",
+    "react-apexcharts": "^1.5.0",
     "react-dom": "^17.0.2",
     "react-icons": "^4.11.0",
     "react-spinners": "^0.13.5",
