--- a/Solana-Token-Starter-File/package.json
+++ b/Solana-Token-Starter-File/package.json
@@ -12,6 +12,7 @@
     "@formspree/react": "^2.5.1",
     "@heroicons/react": "^1.0.5",
     "@metaplex-foundation/mpl-token-metadata": "^2.3.3",
+    "@project-serum/anchor": "^0.26.0",
     "@solana/spl-token": "^0.3.5",
     "@solana/wallet-adapter-base": "^0.9.3",
     "@solana/wallet-adapter-react": "^0.15.35",
@@ -39,6 +40,6 @@
     "autoprefixer": "^10.4.20",
     "postcss": "^8.4.47",
     "tailwindcss": "^3.4.14",
-    "typescript": "4.5.4"
+    "typescript": "^5.6.3"
   }
 }
