--- a/Solana-Token-Starter-File/package.json
+++ b/Solana-Token-Starter-File/package.json
@@ -9,6 +9,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "@coral-xyz/anchor": "^0.30.1",
     "@formspree/react": "^2.5.1",
     "@heroicons/react": "^1.0.5",
     "@metaplex-foundation/mpl-token-metadata": "^2.3.3",
